@@ -4,6 +4,7 @@ UNRELEASED  David Schweikert  <david@schweikert.ch>
   * Support ppc64le architecture by including alpha libtool version
     (reported by Amit Kumar Gupta and Aravinda B Thunug)
   * Fix compliation problem on FreeBSD (#57)
+  * Don't output usage information on error
 
 2013-11-08  David Schweikert  <david@schweikert.ch>
   * Version 3.8
